--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,7 @@
     });
 });
     </script>
+    <iframe data-aa='2275164' src='//ad.a-ads.com/2275164?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 </body>
 </html>
