--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,17 @@
 });
     </script>
     <iframe data-aa='2275164' src='//ad.a-ads.com/2275164?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7906566890403893"
+    crossorigin="anonymous"></script>
+<!-- add -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-7906566890403893"
+    data-ad-slot="7436436650"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
