--- a/templates/index.html
+++ b/templates/index.html
@@ -49,14 +49,17 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7906566890403893"
     crossorigin="anonymous"></script>
 <!-- add -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7906566890403893"
+     crossorigin="anonymous"></script>
+<!-- add -->
 <ins class="adsbygoogle"
-    style="display:block"
-    data-ad-client="ca-pub-7906566890403893"
-    data-ad-slot="7436436650"
-    data-ad-format="auto"
-    data-full-width-responsive="true"></ins>
+     style="display:block"
+     data-ad-client="ca-pub-7906566890403893"
+     data-ad-slot="7436436650"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </body>
 </html>
